css/style.css
/* ... */
.auth-forms input[type=submit] {
    background-color: #000;
    color: #fff;
    cursor: pointer;
}

.auth-forms input[type=submit]:hover,
.auth-forms input[type=submit]:focus,
.auth-forms input[type=submit]:active {
    background-color: #e2d1a6;
}

.checkbox-group {
    margin-bottom: 10px;
}

.sign-in a {
    text-decoration: none;
    font-size: 12px;
    color: rgb(181, 180, 180);
}

.sign-in a:hover, 
.sign-in a:active {
    text-decoration: underline;
}

.sign-up input[type=checkbox] {
    width: 10px;
    height: 10px;
    border: none;
}

.sign-up label {
    font-size: 10px;
    color: rgb(181, 180, 180);
    vertical-align: middle;
}

/*======================================== HEADER ========================================*/

.header {
    background-color: #353436;
    color: #fff;   
    width: 100%; 
}

.header .container {
    position: relative;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;
    padding-top: 24px;
    padding-bottom: 20px;
}  

.nav {
    display: flex;
    flex-direction: row;
    align-items: flex-end;        
}

.nav a {  
    text-transform: uppercase;  
    text-decoration: none;
    color: #fff;   
    font-size: 18px; 
    margin-left: 15px;
    margin-right: 10px;        
}  

.nav a:last-child {
    margin-right: 0;
}

.nav a:hover,
.nav a:active,
.nav a.active {
    color: #e2d1a6;
    text-shadow: 0 0 3px #e2d1a6;    
}

.dropdown {
    overflow: hidden;
}

.dropdown-content {    
    display: none;
    position: absolute;
    z-index: 10;
    background-color: #353436; 
    box-sizing: border-box; 
    width: 149px; 
    padding-top: 30px;    
}

.dropdown:hover .dropdown-content {
    display: block;
}

.dropdown-content a {
    display: block;
    font-size: 16px;      
    padding: 5px 8px;
    margin-left: 8px;
    margin-right: 8px;
}

.dropdown-content a:not(:last-child) {    
    border-bottom: 1px solid #fff;
}

.dropdown-content a:last-child {    
    padding-bottom: 13px;
}

/*======================================== MAIN ========================================*/

.main {
    width: 100%;
    display: block;
    background-image: url('../img/main-img-full.jpg');
    background-repeat: no-repeat;    
    background-position: center -98px;   
    background-color: #353436;
    background-size: auto;
    min-height: 671px;      
}

.main .container {
    position: relative;
    min-height: 671px;  
}

.about {
    width: auto;
    background-color: rgba(255, 255, 255, 0.85);    
    float: right;    
    margin-top: 251px;
    min-height: 138px;          
}

.about__content {    
    box-sizing: content-box;
    max-width: 469px;
    padding-left: 20px;
    padding-right: calc((100vw - 1200px)/2);
}

.about__content h1 {
    font-family: 'Playfair Display', serif;
    font-weight: 700;
    font-style: italic;
    font-size: 30px;
    text-transform: uppercase;
    margin-top: 15px;
    margin-bottom: 23px;
    padding-left: 7px;
    letter-spacing: -0.3px;
}  

.about__content p {
    box-sizing: border-box;
    font-size: 18px;
    padding-left: 7px;
    padding-right: 20px;
    line-height: 1.333;
}  

.buttons {
    width: 84px;
    height: 54px;
    position: absolute;    
    bottom: 0px;        
    left: 50%;
    margin-left: -42px;
}

.slider-buttons {
    text-align: center;
    margin-bottom: 8px;
    height: 18px;
}

.dot {
    width: 14px;
    height: 14px;
    box-sizing: border-box;
    background-color: #fff;
    border: 1px solid #000;
    border-radius: 50%;
    display: inline-block;
    margin: 0 5px;
    cursor: pointer;
}

.dot.active, .dot:hover {
    background-color: #e2d1a6;
}

.show-button {    
    width: 84px;
    height: 28px;
    background-color: #fff;
    background-image: url('../img/arrow-up.png');
    background-repeat: no-repeat;
    background-position: center;
    border: none;
    outline: none;
    cursor: pointer;
    padding: 0;
}

.hide-button {
    width: 88px;
    height: 29px;
    background-color: #fff;
    border: none;
    outline: none;
    padding: 0;
    background-image: url(../img/arrow-down.png);
    background-repeat: no-repeat;
    background-position: center;
    position: absolute;
    top: -29px;
    left: 50%;
    margin-left: -44px;
    cursor: pointer;
}

.articles-block {
    display: none;
    position: absolute;
    bottom: 0;
    left: 0;   
    right: 0; 
}

.articles {
    display: flex;
    flex-direction: row;
    justify-content: center;      
}

.article {
    display: block;
    box-sizing: border-box;
    width: 400px;      
    padding-left: 15px;
    padding-right: 20px;
    padding-bottom: 10px;     
}

.article-1 {
    background-color: #e2d1a6;
}

.article-2 {
    background-color: #fff;
}

.article-3 {
    background-color: #000;
    color: #fff;
}

.article h2 {
    font-family: 'Playfair Display', serif;
    font-size: 28px;
    font-weight: 700;
    display: block;
    margin-top: 14px;
    margin-bottom: 1px;
    min-height: 65px; 
    line-height: 1.08;  
}  

.article p {
    margin-top: 0;
    margin-bottom: 14px;
    line-height: 1.562;
}  

.article a {
    float: right;
    text-decoration: none;
    font-size: 18px;
}

.article a:hover, 
.article a:active {
    text-decoration: underline;
}

.article-1 a,
.article-3 a {
    color: #fff;
}

.article-2 a {
    color: #000;
}

/*======================================== FOOTER ========================================*/

.footer {
    min-height: 273px;
    background-color: #353436;
    color: #fff;    
}

.footer .container {
    display: flex;
    flex-direction: column;
    align-content: space-between;
}

.footer-top {
    display: flex;
    flex-direction: row;
    justify-content: center;
    padding-top: 34px;
    padding-bottom: 15px;
    margin: 0 130px;
}
/* ... */

